--- a/web/app/themes/schnapps/templates/index.html
+++ b/web/app/themes/schnapps/templates/index.html
@@ -1,3 +1,11 @@
-<!-- wp:template-part {"slug":"header", "tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header", "tagName": "header"} /-->
 
 <!-- wp:post-content /-->
+
+<!-- wp:group -->
+<div class="wp-block-group font-bold">
+  <!-- wp:paragraph -->
+  <p>Welcome to the world of blocks.</p>
+  <!-- /wp:paragraph -->
+</div>
+<!-- /wp:group -->
