feat: header nav

--- a/web/app/themes/schnapps/src/blocks/Logo/view.twig
+++ b/web/app/themes/schnapps/src/blocks/Logo/view.twig
@@ -1,10 +1,20 @@
 <a class="max-w-[63px] block" href="/">
   <picture class="block">
-  {% if (mobileUrl) %}
-      <source media="(max-width: 767px)" srcset="{{ mobileUrl }} ?>" />
+    {% if mobileUrl %}
+      <source media="(max-width: 767px)" srcset="{{ mobileUrl }}" />
     {% endif %}
-    {% if (url) %}
-      <img width="{{width}}" height="{{height}}" class="w-full !h-full object-cover" src="{{url}}" alt="{{alt}}" />
+    {% if url %}
+      <img 
+        {% if width %}
+          width="{{width}}"
+        {% endif %}
+        {% if height %}
+          height="{{height}}"
+        {% endif %}
+        class="w-full !h-full object-cover" 
+        src="{{url}}" 
+        alt="{{alt}}" 
+      />
     {% endif %}
   </picture>
 </a>
