--- a/web/app/themes/schnapps/src/blocks/HeaderNavigation/view.twig
+++ b/web/app/themes/schnapps/src/blocks/HeaderNavigation/view.twig
@@ -1,7 +1,19 @@
-<div class="block">
-  <h1>Block</h1>
-</div>
-
-<pre>
-{{ nav | json_encode(constant('JSON_PRETTY_PRINT'))}}
-</pre>
+{% if nav %}
+<nav>
+    <ul class="flex pl-0 list-none">
+        {% for item in nav %}
+        <li class="px-4">
+            <a href="{{ item.url }}">{{ item.title }}</a>
+            {% if item.children %}
+            <ul class="pl-0 list-none">
+                {% for child in item.children %}
+                <li>
+                    <a href="{{ child.url }}">{{ child.title }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </li>
+        {% endfor %}
+    </ul>
+{% endif %}
