--- a/web/app/themes/schnapps/src/main.css
+++ b/web/app/themes/schnapps/src/main.css
@@ -10,3 +10,7 @@ Requires at least:  5.9
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.wp-block-force-loading {
+  display: none;
+}
