feat: column width and namespacing

--- a/web/app/themes/schnapps/src/blocks/columns/view.twig
+++ b/web/app/themes/schnapps/src/blocks/columns/view.twig
@@ -1,5 +1,5 @@
 <section class="columns">
   <div class="container">
-    <InnerBlocks className="flex justify-center -mx-4 gap-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
+    <InnerBlocks className="flex flex-wrap justify-center -mx-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
   </div>
 </section>
