--- a/web/app/themes/schnapps/src/main.css
+++ b/web/app/themes/schnapps/src/main.css
@@ -11,6 +11,10 @@ Requires at least:  5.9
 @tailwind components;
 @tailwind utilities;
 
+.container .container {
+  @apply px-0;
+}
+
 .wp-block-force-loading {
   display: none;
 }
