wip: slide component

--- a/web/app/themes/schnapps/src/blocks/banner/view.twig
+++ b/web/app/themes/schnapps/src/blocks/banner/view.twig
@@ -3,23 +3,7 @@
     <div class="blaze-slider">
         <div class="blaze-container">
             <div class="blaze-track-container">
-                <div class="blaze-track">
-                {% for slide in slides %}
-                    <div class="relative">
-                        {% if slide.image %}
-                            <picture class="block aspect-video">
-                                <img class="w-full !h-full object-cover" src="{{ slide.image.url }}" alt="{{ slide.image.alt }}" />
-                            </picture>
-                        {% endif %}
-
-                        <div class="absolute inset-0 flex items-center justify-center">
-                            <div class="container py-8 bg-red-100">
-                                {{ slide.caption | raw }}
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-                </div>
+                <InnerBlocks className="blaze-track {% if isAdmin %} overflow-x-scroll flex {% endif %}" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
             </div>
         </div>
     </div>
