wip: adjustments to slide

--- a/web/app/themes/schnapps/src/blocks/Slide/editor.css
+++ b/web/app/themes/schnapps/src/blocks/Slide/editor.css
@@ -1,3 +1,15 @@
+.editor-styles-wrapper h1,
+.editor-styles-wrapper h2,
+.editor-styles-wrapper h3,
+.editor-styles-wrapper h4,
+.editor-styles-wrapper h5,
+.editor-styles-wrapper h6,
+.editor-styles-wrapper p,
+.editor-styles-wrapper ul,
+.editor-styles-wrapper ol {
+  font-family: sans-serif;
+}
+
 .wp-block-giantpeach-slide {
   width: 100%;
   flex-shrink: 0;
