--- a/web/app/themes/schnapps/src/blocks/Slide/view.twig
+++ b/web/app/themes/schnapps/src/blocks/Slide/view.twig
@@ -17,9 +17,11 @@
         </div>
     {% endif %}
 
-    <div class="absolute inset-0 flex items-center justify-center">
-        <div class="container py-8 bg-red-100">
-          <InnerBlocks />
+    <div class="absolute inset-0 bg-black/25"></div>
+
+    <div class="absolute inset-0 flex items-center justify-center text-white">
+        <div class="container py-8 {% if isAdmin %}outline-1 outline-dashed transition-all duration-300{% endif %}">
+          <InnerBlocks allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
         </div>
     </div>
 </div>
