feat: adds tailwind typography and options for setting classes on blocks

--- a/web/app/themes/schnapps/src/blocks/columns/view.twig
+++ b/web/app/themes/schnapps/src/blocks/columns/view.twig
@@ -1,5 +1,5 @@
 <section class="columns">
-  <div class="container">
-    <InnerBlocks className="flex flex-wrap justify-center -mx-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
+  <div class="container ">
+    <InnerBlocks className="prose {{ classes.prose.color }} max-w-none flex flex-wrap justify-center -mx-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
   </div>
 </section>
