--- a/web/app/themes/schnapps/src/blocks/columns/view.twig
+++ b/web/app/themes/schnapps/src/blocks/columns/view.twig
@@ -1,6 +1,6 @@
 <section class="{{ classes.block.name }} {{ classes.block.spacing }}">
   <div class="container ">
-    <InnerBlocks className="prose {{ classes.prose.color }} max-w-none flex flex-wrap justify-center -mx-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
+    <InnerBlocks className="prose {{ classes.prose.color }} {{ classes.prose.size }} max-w-none flex flex-wrap justify-center -mx-4" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
   </div>
 </section>
 
