--- a/web/app/themes/schnapps/src/blocks/HeaderNavigation/view.twig
+++ b/web/app/themes/schnapps/src/blocks/HeaderNavigation/view.twig
@@ -1,4 +1,8 @@
 {% if nav %}
+
+{% include 'src/Components/menu-button.twig' %}
+
+
 <nav>
     <ul class="flex pl-0 list-none">
         {% for item in nav %}
