--- a/web/app/themes/schnapps/src/blocks/image/view.twig
+++ b/web/app/themes/schnapps/src/blocks/image/view.twig
@@ -1,9 +1,1 @@
-<picture class="block not-prose">
-  {% if webp %}
-    <source srcset="{{ webp }}" type="image/webp" />
-  {% endif %}
-
-  {% if url %}
-    <img class=" w-full !h-full object-cover" src="{{ url }}" alt="{{ alt }}" />
-  {% endif %}
-</picture>
+{% include "src/Components/image.twig" with {rounded: true} %}
