--- a/web/app/themes/schnapps/src/Blocks/Banner/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Banner/view.twig
@@ -1,9 +1,10 @@
-<section class="relative overflow-hidden banner aspect-video">
+<section class="relative overflow-hidden banner">
 
     <div class="blaze-slider">
         <div class="blaze-container">
             <div class="blaze-track-container">
-                <InnerBlocks className="blaze-track {% if isAdmin %} overflow-x-scroll flex {% endif %}" allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
+                <InnerBlocks className="blaze-track {% if isAdmin %} overflow-x-scroll flex {% endif %}"
+                    allowedBlocks="{{ allowedBlocks | wp_json_encode }}" />
             </div>
         </div>
     </div>
