--- a/web/app/themes/schnapps/src/Components/post-card.twig
+++ b/web/app/themes/schnapps/src/Components/post-card.twig
@@ -1,9 +1,9 @@
-
-<a class="flex group mb-12  lg:mb-24 flex-col flex-grow transition-block {% if isAdmin == false %} translate-y-8 {% endif %}" href="{{link.url}}">
+<a class="flex group mb-12  lg:mb-24 flex-col flex-grow transition-block {% if isAdmin == false %} translate-y-8 {% endif %}"
+  href="{{link.url}}">
   <div class="mb-4 aspect-[576/587] flex flex-shrink-0 flex-col justify-end  overflow-hidden">
     <div class="overflow-hidden rounded-[36px]">
       <div class="transition-all duration-300 group-hover:scale-110">
-        {% include 'src/Components/image.twig' %}      
+        {% include 'image.twig' %}
       </div>
     </div>
   </div>
