--- a/web/app/themes/schnapps/src/Blocks/Column/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Column/view.twig
@@ -1,1 +1,2 @@
-<InnerBlocks className="px-4 prose {{ classes.prose.color }} {{ classes.prose.size }} {{ classes.width }} {{ classes.flexGrow }} {{ classes.display | join(' ') }} max-w-none {% if isAdmin %} outline-1 outline-dashed {% endif %} {% if breakout.left %} breakout-left {% endif %} {% if breakout.right %} breakout-right {% endif %}"  />
+<InnerBlocks
+  className="px-4 prose {{ wrapperClass }} {{ columnClass }} max-w-none {% if isAdmin %} outline-1 outline-dashed {% endif %} {% if breakout.left %} breakout-left {% endif %} {% if breakout.right %} breakout-right {% endif %}" />
