Add support for Prose and Spacing traits

--- a/web/app/themes/schnapps/src/Blocks/Column/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Column/view.twig
@@ -1,2 +1,2 @@
 <InnerBlocks
-  className="px-4 prose {{ wrapperClass }} {{ columnClass }} max-w-none {% if isAdmin %} outline-1 outline-dashed {% endif %} {% if breakout.left %} breakout-left {% endif %} {% if breakout.right %} breakout-right {% endif %}" />
+  className="px-4 {{ proseClass }} {{ wrapperClass }} {{ columnClass }} max-w-none {% if isAdmin %} outline-1 outline-dashed {% endif %} {% if breakout.left %} breakout-left {% endif %} {% if breakout.right %} breakout-right {% endif %}" />
