--- a/web/app/themes/schnapps/src/Blocks/Columns/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Columns/view.twig
@@ -1,5 +1,4 @@
-<section
-  class="{{ classes.block.name }} {{ classes.block.spacing }} transition-block {% if isAdmin == false %} translate-y-8 {% endif %}">
+<section class="{{ wrapperClass }} transition-block {% if isAdmin == false %} translate-y-8 {% endif %}">
   <div class="container ">
     <InnerBlocks
       className="columns-inner prose {{ classes.prose.color }} {{ classes.prose.size }} {{ justifyContent.desktop }} {{ justifyContent.tablet }} {{ justifyContent.mobile }} {{ alignItems.desktop }} {{ alignItems.tablet }} {{ alignItems.mobile }} max-w-none flex {{ wrapClass }} -mx-4"
