--- a/web/app/themes/schnapps/src/Blocks/Banner/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Banner/view.twig
@@ -1,4 +1,4 @@
-<section class="relative overflow-hidden banner">
+<section class="{{ wrapperClass }} relative overflow-hidden">
 
     <div class="blaze-slider">
         <div class="blaze-container">
