--- a/web/app/themes/schnapps/src/Blocks/Button/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Button/view.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}" class="not-prose inline-block p-4 px-8 no-underline bg-slate-100 hover:bg-slate-300 {{ size }} {{ align }}" target="{{ target }}" rel="{{ rel }}">{{ text }}</a>
+{% include 'button.twig' %}
