--- a/web/app/themes/schnapps/src/Blocks/Hero/view.twig
+++ b/web/app/themes/schnapps/src/Blocks/Hero/view.twig
@@ -1,4 +1,4 @@
-<section>
+<section class="{{ wrapperClass }}">
   <div class="container relative">
     <div class="w-full aspect-video">
       {% if image %}
