--- a/web/app/themes/schnapps/src/Components/post-card.twig
+++ b/web/app/themes/schnapps/src/Components/post-card.twig
@@ -1,13 +1,24 @@
-<a class="flex group mb-12  lg:mb-24 flex-col flex-grow transition-block {% if isAdmin == false %} translate-y-8 {% endif %}"
-  href="{{link.url}}">
-  <div class="mb-4 aspect-[576/587] flex flex-shrink-0 flex-col justify-end  overflow-hidden">
-    <div class="overflow-hidden rounded-[36px]">
-      <div class="transition-all duration-300 group-hover:scale-110">
-        {% include 'image.twig' %}
-      </div>
+<div class="bg-[#ebecf0] group/postcard text-black">
+  <a href="{{ link.url }}" class="bg-[#ebecf0] block overflow-hidden [&_img]:scale-[1.005] [&_img]:duration-300 group-hover/postcard:[&_img]:scale-[1.05]">
+    {% if image %}
+      {% include 'image.twig' %}
+    {% else %}
+      <div class="aspect-[3/2] bg-slate-400"></div>
+    {% endif %}
+  </a>
+
+  <div class="px-5 py-8">
+    <p class="text-16 opacity-50 mb-5">{{ date }}</p>
+    <h3 class="text-fluid-24"><a href="{{ link.url }}">{{ title | raw }}</a></h3>
+
+    <div class="flex justify-between items-center mt-8">
+      <a href="{{ link.url }}" class="text-blue-500">{{ link.title }}</a>
+
+      {% if category %}
+        <a href="{{ category.url }}" class="text-blue-500" data-category="{{ category.slug }}">
+          {{ category.name | raw }}
+        </a>
+      {% endif %}
     </div>
   </div>
-  <h3 class="text-[clamp(23px,2.1875vw,42px)] leading-[1.22] transition-colors group-hover:text-primary">
-    {{title}}
-  </h3>
-</a>
+</div>
